Add full Posts API docs
